--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
-dgShowLocalGraph=true
+dgShowBacklinks=true
+dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
