--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=true
-dgLinkPreview=false
+dgLinkPreview=true
 dgShowTags=false
