--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 THEME=https://raw.githubusercontent.com/deathau/80s-Neon-for-Obsidian.md/HEAD/theme.css
 BASE_THEME=dark
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Illuminated Ink
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
