--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 THEME=https://raw.githubusercontent.com/deathau/80s-Neon-for-Obsidian.md/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=Illuminated Ink
-SITE_BASE_URL=https://illuminated-ink.vercel.app/
+SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
